deck guide: add functions to load JSONs from web sources

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Note that adding \"fw\" will install some required dependencies. A plain \".\" will not.\n",
-    "!pip install .[fw]"
+    "%pip install .[fw]"
    ]
   },
   {
@@ -956,31 +956,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Example using exported data.\n",
     "import json\n",
+    "import urllib.request\n",
     "\n",
-    "# 'data/ws_export.json'\n",
-    "ws_export_file = \"/tmp/workspaces.json\"\n",
-    "with open(ws_export_file, \"r\", encoding=\"utf-8\") as f:\n",
-    "  workspaces = json.load(f)\n",
-    "workspace = workspaces[0]\n",
+    "def load_objects_from_url(target_url):\n",
+    "  data = urllib.request.urlopen(target_url)\n",
+    "  objects = json.load(data)\n",
+    "  return objects\n",
     "\n",
-    "pt_export_file = \"/tmp/platforms.json\"\n",
-    "with open(pt_export_file, \"r\", encoding=\"utf-8\") as f:\n",
-    "  platforms = json.load(f)\n",
+    "target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/workspaces.json'\n",
+    "workspace = load_objects_from_url(target_url)[0]\n",
     "\n",
-    "ct_export_file = \"/tmp/containers.json\"\n",
-    "with open(ct_export_file, \"r\", encoding=\"utf-8\") as f:\n",
-    "  containers = json.load(f)"
+    "target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/platforms.json'\n",
+    "platforms = load_objects_from_url(target_url)\n",
+    "\n",
+    "target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/containers.json'\n",
+    "containers = load_objects_from_url(target_url)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def load_objects_from_file(file_path):\n",
+    "  with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "    objects = json.load(f)\n",
+    "  return objects\n",
+    "\n",
+    "# workspaces = load_objects_from_file(\"/tmp/workspaces.json\")\n",
+    "# workspace = workspaces[0]\n",
+    "\n",
+    "# platforms = load_objects_from_file(\"/tmp/platforms.json\")\n",
+    "\n",
+    "# containers = load_objects_from_file(\"/tmp/containers.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from pylabrobot.resources import SilverDeck\n",
