add "print grid" to pipettin tip and tube racks, and __repr__ to itemized_resource

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -983,7 +983,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -1017,7 +1019,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "deck.children"
@@ -1026,7 +1030,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "deck.get_all_children()"
@@ -1035,7 +1041,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from pylabrobot.liquid_handling import LiquidHandler\n",
@@ -1051,19 +1059,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "tiprack = lh.get_resource(\"200ul_tip_rack_MULTITOOL 1\")\n",
     "\n",
     "# Check if all tip spots have tips.\n",
-    "all([tipspot.tracker.has_tip for tipspot in tiprack.children])"
+    "all([spot.tracker.has_tip for spot in tiprack.children])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tiprack.print_grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from pylabrobot.resources import set_tip_tracking, set_volume_tracking\n",
@@ -1076,7 +1099,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tip_spots = tiprack[\"A1:A3\"]\n",
+    "\n",
+    "# TODO: Ask for a better error message when tips are passed instead of tip spots.\n",
+    "await lh.pick_up_tips(tip_spots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tiprack.print_grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -1089,26 +1139,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
-    "tip_spots = tiprack[\"A1:A3\"]\n",
+    "# plate = lh.get_resource(\"Standard 96-well plate 1\")\n",
+    "plate = lh.get_resource(\"5x16_1.5_rack 1\")\n",
+    "plate.print_grid()\n",
     "\n",
-    "# TODO: Ask for a better error message when tips are passed instead of tip spots.\n",
-    "await lh.pick_up_tips(tip_spots)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plate = lh.get_resource(\"Standard 96-well plate 1\")\n",
+    "# tube_spots = plate[\"A1:H12\"]\n",
+    "tube_spots = plate.children\n",
     "\n",
-    "tube_spots = plate[\"A1:C1\"]\n",
-    "\n",
-    "[spot.tracker.has_tube for spot in tube_spots]\n",
+    "#[spot.tracker.has_tube for spot in tube_spots]\n",
     "#[spot.tracker.has_tube for spot in plate.get_all_items()]\n",
     "#all([spot.tracker.has_tube for spot in tube_spots])\n",
     "#len([spot.tracker.has_tube for spot in plate.get_all_items()])"
@@ -1117,10 +1160,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
-    "tubes = [tube_spot.get_tube() for tube_spot in tube_spots]\n",
+    "tubes = [spot.get_tube() for spot in tube_spots if spot.tracker.has_tube]\n",
     "\n",
     "[tube.tracker.liquids for tube in tubes]"
    ]
@@ -1128,7 +1173,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "tube = tubes[0]\n",
@@ -1139,7 +1186,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -1153,10 +1202,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
-    "await lh.aspirate(tubes, vols=[90.0, 40.0, 9.0])\n",
+    "await lh.aspirate(tubes, vols=[90.0, 20.0, 9.0])\n",
     "\n",
     "[tube.tracker.liquids for tube in tubes]"
    ]
@@ -1164,7 +1215,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "await lh.dispense(tubes, vols=[1.0, 1.0, 1.0])\n",
