--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -995,8 +995,8 @@
     "    objects = json.load(f)\n",
     "  return objects\n",
     "\n",
-    "workspaces = load_objects_from_file(\"/home/nicomic/Projects/GOSH/gosh-col-dev/pipettin-bot/code/pipettin-gui/api/src/db/defaults/workspaces.json\")\n",
-    "workspace = workspaces[0]\n",
+    "# workspaces = load_objects_from_file(\"/tmp/workspaces.json\")\n",
+    "# workspace = workspaces[0]\n",
     "\n",
     "# platforms = load_objects_from_file(\"/tmp/platforms.json\")\n",
     "\n",
@@ -1005,31 +1005,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding 0 uL of Liquid.WATER.\n",
-      "Adding 500 uL of Liquid.WATER.\n",
-      "Adding 40 uL of Liquid.WATER.\n",
-      "Adding 40 uL of Liquid.WATER.\n",
-      "Adding 1 uL of Liquid.WATER.\n",
-      "Adding 1 uL of Liquid.WATER.\n",
-      "Adding 1 uL of Liquid.WATER.\n",
-      "Adding 1 uL of Liquid.WATER.\n",
-      "Adding 1 uL of Liquid.WATER.\n",
-      "Adding 0 uL of Liquid.WATER.\n",
-      "Adding 0 uL of Liquid.WATER.\n",
-      "Adding 0 uL of Liquid.WATER.\n",
-      "Method not implemented for platform type: ANCHOR\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pylabrobot.resources import SilverDeck\n",
     "\n",
@@ -1038,27 +1018,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[CustomPlatform(name=Pocket PCR, location=(025.390, 268.370, 000.000), size_x=120, size_y=40, size_z=50, category=CUSTOM),\n",
-       " Trash(name=trash_bucket 1, location=(179.000, 233.000, 000.000), size_x=130, size_y=100, size_z=80, category=BUCKET),\n",
-       " TipRack(name=200ul_tip_rack_MULTITOOL 1, size_x=122, size_y=86, size_z=80, location=(020.189, 020.189, 000.000)),\n",
-       " TubeRack(name=5x16_1.5_rack 1, size_x=215, size_y=72, size_z=80, location=(150.000, 023.000, 000.000)),\n",
-       " PetriDish(name=Petri dish 90x15 1, location=(071.000, 179.000, 000.000), size_x=90, size_y=90, size_z=15, category=PETRI_DISH),\n",
-       " TubeRack(name=Standard 96-well plate 1, size_x=121, size_y=86, size_z=20, location=(150.000, 135.000, 000.000))]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "deck.children\n",
     "# deck.get_all_children()"
