tube_racks: override IR methods and fixes to return Tubes instead of TubeSpots

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1135,16 +1135,20 @@
    "outputs": [],
    "source": [
     "# plate = lh.get_resource(\"Standard 96-well plate 1\")\n",
-    "plate = lh.get_resource(\"5x16_1.5_rack 1\")\n",
-    "plate.print_grid()\n",
+    "\n",
+    "tube_rack = lh.get_resource(\"5x16_1.5_rack 1\")\n",
+    "tube_rack.print_grid()\n",
+    "tube_rack[\"A1\"]\n",
     "\n",
     "# tube_spots = plate[\"A1:H12\"]\n",
-    "tube_spots = plate.children\n",
-    "\n",
+    "# tube_spots = tube_rack.children\n",
     "#[spot.tracker.has_tube for spot in tube_spots]\n",
     "#[spot.tracker.has_tube for spot in plate.get_all_items()]\n",
     "#all([spot.tracker.has_tube for spot in tube_spots])\n",
-    "#len([spot.tracker.has_tube for spot in plate.get_all_items()])"
+    "#len([spot.tracker.has_tube for spot in plate.get_all_items()])\n",
+    "\n",
+    "tubes = tube_rack.get_all_tubes()\n",
+    "tubes"
    ]
   },
   {
@@ -1155,8 +1159,6 @@
    },
    "outputs": [],
    "source": [
-    "tubes = [spot.get_tube() for spot in tube_spots if spot.tracker.has_tube]\n",
-    "\n",
     "[tube.tracker.liquids for tube in tubes]"
    ]
   },
@@ -1171,6 +1173,20 @@
     "tube = tubes[0]\n",
     "\n",
     "tube.tracker.is_disabled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  await lh.aspirate(tubes, vols=[100.0, 50.0, 200.0])\n",
+    "except Exception as e:\n",
+    "    print(\"Error:\", e)"
    ]
   },
   {
@@ -1223,7 +1239,6 @@
    "source": [
     "# plate = lh.get_resource(\"plate_01\")\n",
     "# await lh.aspirate(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])\n",
-    "\n",
     "# await lh.dispense(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])"
    ]
   },
