PiperBackend: basics function, uses NoObject "DB", lots of review and cleanup left.

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1036,10 +1036,24 @@
    },
    "outputs": [],
    "source": [
-    "from pylabrobot.liquid_handling import LiquidHandler\n",
     "from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
-    "\n",
     "back = ChatterBoxBackend()\n",
+    "\n",
+    "# NOTE: For the PiperBackend.\n",
+    "# from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
+    "# file_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/tools.json'\n",
+    "# back = PiperBackend(piper_config={\"dry\": True}, tools_json=file_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "from pylabrobot.liquid_handling import LiquidHandler\n",
     "\n",
     "# TODO: Ask for a better error message when a non-instantiated backend is passed.\n",
     "lh = LiquidHandler(backend=back, deck=deck)\n",
@@ -1094,10 +1108,11 @@
    },
    "outputs": [],
    "source": [
-    "tip_spots = tiprack[\"A1:A3\"]\n",
+    "# tip_spots = tiprack[\"A1\"]  # NOTE: For the PiperBackend.\n",
+    "tip_spots = tiprack[\"A1:C1\"]\n",
     "\n",
     "# TODO: Ask for a better error message when tips are passed instead of tip spots.\n",
-    "await lh.pick_up_tips(tip_spots)"
+    "await lh.pick_up_tips(tip_spots, tool_id=\"P20\")"
    ]
   },
   {
@@ -1120,8 +1135,9 @@
    "outputs": [],
    "source": [
     "try:\n",
+    "  # tips = tiprack.get_tip(\"A1\")  # NOTE: For the PiperBackend.\n",
     "  tips = tiprack.get_tips(\"A1:C1\")\n",
-    "  tips\n",
+    "  print(tips)\n",
     "except Exception as e:\n",
     "  print(e)"
    ]
@@ -1186,7 +1202,14 @@
     "try:\n",
     "  await lh.aspirate(tubes, vols=[100.0, 50.0, 200.0])\n",
     "except Exception as e:\n",
-    "    print(\"Error:\", e)"
+    "    print(\"Error:\", e)\n",
+    "\n",
+    "# try:\n",
+    "#   NOTE: Example for the PiperBackend.\n",
+    "#   for tube, vol in zip(tubes, [100.0, 50.0, 200.0]):\n",
+    "#     await lh.aspirate(tube, vol, tool_id=\"P20\")\n",
+    "# except Exception as e:\n",
+    "#     print(\"Error:\", e)"
    ]
   },
   {
