--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -19,16 +19,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
-    "!pip install pylabrobot"
+    "#!pip install pylabrobot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -62,6 +65,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -88,9 +92,10 @@
     "    commands = []\n",
     "    \"\"\"Just a list to store incoming data, forlater inspection\"\"\"\n",
     "\n",
-    "    def __init__(self, num_channels: int = 1):\n",
+    "    def __init__(self, num_channels: int = 1, name=\"echo\"):\n",
     "        \"\"\"Init method for the EchoBackend.\"\"\"\n",
     "        print(f\"EchoBackend - Instantiating the EchoBackend with num_channels={num_channels}\")\n",
+    "        self.name=name\n",
     "        super().__init__()\n",
     "        self._num_channels = num_channels\n",
     "\n",
@@ -169,6 +174,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -188,6 +194,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -218,6 +225,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -252,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "lh.summary()"
@@ -286,6 +296,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -311,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "backend.commands[-1]"
@@ -332,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "pick_up_op = backend.commands[-1][\"ops\"][0]\n",
@@ -351,6 +366,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -381,6 +397,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -400,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "dir(tip_spot)"
@@ -420,6 +439,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -443,7 +463,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "pick_up_op.tip"
@@ -472,7 +494,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Prints \"Default\" which only indicates that this should be replaced by a default value.\n",
@@ -532,6 +556,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -552,6 +577,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -566,7 +592,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Some useful parameters\n",
@@ -581,6 +609,36 @@
     "#pprint(op.resource.tracker.serialize())\n",
     "\n",
     "pprint(op.resource.serialize())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aspirate from multiple wells, with a single-channel pipette:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "print(f\"Backend '{backend.name}' with {backend.num_channels} channel(s).\")\n",
+    "\n",
+    "try:\n",
+    "  # Aspirate 2.0 uL from A1, and then 3.9 uL from A2?\n",
+    "  await lh.aspirate(plate[\"A1:A2\"], vols=[2.0, 3.0])\n",
+    "except Exception as e:\n",
+    "  print(e)\n",
+    "\n",
+    "try:\n",
+    "  # Aspirate 2.0 uL from each well?\n",
+    "  await lh.aspirate(plate[\"A1:A2\"], 2.0)\n",
+    "except Exception as e:\n",
+    "  print(e)"
    ]
   },
   {
@@ -1855,7 +1913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
