fix TipSpot Z calculation

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -973,8 +973,8 @@
     "target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/workspaces.json'\n",
     "workspace = load_objects_from_url(target_url)[0]\n",
     "\n",
-    "target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/platforms.json'\n",
-    "platforms = load_objects_from_url(target_url)\n",
+    "# target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/platforms.json'\n",
+    "# platforms = load_objects_from_url(target_url)\n",
     "\n",
     "target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/containers.json'\n",
     "containers = load_objects_from_url(target_url)"
@@ -998,7 +998,7 @@
     "# workspaces = load_objects_from_file(\"/tmp/workspaces.json\")\n",
     "# workspace = workspaces[0]\n",
     "\n",
-    "# platforms = load_objects_from_file(\"/tmp/platforms.json\")\n",
+    "platforms = load_objects_from_file(\"/tmp/platforms.json\")\n",
     "\n",
     "# containers = load_objects_from_file(\"/tmp/containers.json\")"
    ]
@@ -1026,6 +1026,240 @@
    "source": [
     "deck.children\n",
     "# deck.get_all_children()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tiprack = deck.get_resource(\"200ul_tip_rack_MULTITOOL 1\")\n",
+    "\n",
+    "# Check if all tip spots have tips.\n",
+    "all([spot.tracker.has_tip for spot in tiprack.children])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tiprack.print_grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check TipRack coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "# A \"location\" is relative to the \"parents\".\n",
+    "deck.location, tiprack.location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "# An \"absolute\" location is relative to the deck's origin (the top-level object).\n",
+    "deck.get_absolute_location(), tiprack.get_absolute_location()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What about tip spots?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tip_spot = tiprack.get_item(\"H1\")\n",
+    "\n",
+    "tip_spot.location, tip_spot.get_absolute_location()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tips are not resources, but the have some dimensional properties:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tip = tip_spot.get_tip()\n",
+    "\n",
+    "tip.total_tip_length, tip.fitting_depth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In pipettin the math for the top coordinate of a tip in a tip rack should be:\n",
+    "\n",
+    "1. (+) Workspace's Z origin (usually 0).\n",
+    "     - Get this from the Deck.\n",
+    "2. (+) Platform's Z position: usually 0 for all, can be adjusted.\n",
+    "     - Get this from the TipRack's location.\n",
+    "3. (+) Platform's activeHeight (i.e. tip spot Z position): height of the surface that supports the tips.\n",
+    "     - This is not defined in PLR.\n",
+    "4. (+) Container's offset: Distance from the tip's tip to the tip spot, usually negative (i.e. how much the tip \"sinks\" into the tip spot).\n",
+    "     - This is also undefined in PLR.\n",
+    "     - However, in combination with (3), the equivalent PLR tip spot location can be calculated: (3) - (4) = TipSpot's Z\n",
+    "5. (+) Total tip's length.\n",
+    "    - Available in the Tip object.\n",
+    "6. (-) Tip's fitting depth.\n",
+    "    - Available in the Tip object (should be equal to the tip's length minus the tip's active height).\n",
+    "    - Use with (4) and (5) to obtain the Z coordinate at which the tip is well fitted.\n",
+    "\n",
+    "In summary, I should:\n",
+    "\n",
+    "1. Have the SilverDeck set the TipSpot Z coordinate equal to \"activeHeight\" - \"container_z_offset\".\n",
+    "2. Figure out coordinates for tubes and well plates.\n",
+    "3. Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
+    "4. Have the backend translate (during setup) non-PW decks to PW format, and save them to the database.\n",
+    "   - This is essential when the deck is not PW-ish.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TipSpot Z calculation\n",
+    "\n",
+    "Let's check item 1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tiprack_item = next(i for i in workspace[\"items\"] if i[\"name\"] == tiprack.name)\n",
+    "\n",
+    "tipA1_content = next(t for t in tiprack_item[\"content\"] if t[\"index\"] == 1)\n",
+    "\n",
+    "tip1A_container = next(c for c in containers if c[\"name\"] == tipA1_content[\"container\"])\n",
+    "\n",
+    "tiprack_platform = next(p for p in platforms if p[\"name\"] == tiprack_item[\"platform\"])\n",
+    "\n",
+    "container_offset_z = next(l[\"containerOffsetZ\"]\n",
+    "                          for l in tiprack_platform[\"containers\"]\n",
+    "                          if l[\"container\"] == tip1A_container[\"name\"])\n",
+    "\n",
+    "tiprack_platform[\"activeHeight\"], container_offset_z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora calcular el Z del tip spot segun lo que dije:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tip_spot_Z = tiprack_platform[\"activeHeight\"] - container_offset_z\n",
+    "\n",
+    "tip_spot_Z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y comparar con lo que calculé en PLR:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "tip_spot.location.z == tip_spot_Z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si fue \"True\" está todo bien ;)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Well and TubeRack locations\n",
+    "\n",
+    "Lets try with point 2.\n",
+    "\n",
+    "Figure out coordinates for tubes and well plates.\n",
+    "\n",
+    "### PLR-PW new child translator - Part 1: Deck\n",
+    "\n",
+    "Lets try with point 3.\n",
+    "\n",
+    "Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
+    "\n",
+    "### PLR-PW new child translator - Part 2: Back\n",
+    "\n",
+    "Lets try with point 4.\n",
+    "\n",
+    "Have the backend translate (during setup) non-PW decks to PW format, and save them to the database.\n",
+    "   - This is essential when the deck is not PW-ish."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use with the Piper backend"
    ]
   },
   {
@@ -1068,31 +1302,6 @@
    },
    "outputs": [],
    "source": [
-    "tiprack = lh.get_resource(\"200ul_tip_rack_MULTITOOL 1\")\n",
-    "\n",
-    "# Check if all tip spots have tips.\n",
-    "all([spot.tracker.has_tip for spot in tiprack.children])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "tiprack.print_grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
     "from pylabrobot.resources import set_tip_tracking, set_volume_tracking\n",
     "\n",
     "# We enable tip and volume tracking globally using the `set_volume_tracking` and `set_tip_tracking` methods.\n",
@@ -1108,11 +1317,13 @@
    },
    "outputs": [],
    "source": [
+    "tiprack = lh.get_resource(\"200ul_tip_rack_MULTITOOL 1\")\n",
+    "\n",
     "# tip_spots = tiprack[\"A1\"]  # NOTE: For the PiperBackend.\n",
     "tip_spots = tiprack[\"A1:C1\"]\n",
     "\n",
     "# TODO: Ask for a better error message when tips are passed instead of tip spots.\n",
-    "await lh.pick_up_tips(tip_spots, tool_id=\"P20\")"
+    "pickups = await lh.pick_up_tips(tip_spots, tool_id=\"P20\")"
    ]
   },
   {
@@ -1263,6 +1474,40 @@
     "# plate = lh.get_resource(\"plate_01\")\n",
     "# await lh.aspirate(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])\n",
     "# await lh.dispense(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check Pickup coordinates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The \"pickup\" object is what a backend gets as argument to figure out the tip's coordinates.\n",
+    "\n",
+    "Turns out it only contains the tip spot and an offset (and the tip, which can be accessed through the tip spot too)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "from pylabrobot.liquid_handling.standard import Pickup\n",
+    "from pylabrobot.resources.coordinate import Coordinate\n",
+    "\n",
+    "tip_spot = tiprack.get_item(\"F1\")\n",
+    "\n",
+    "pickup = Pickup(resource=tip_spot, offset=Coordinate(0,0,0,), tip=tip_spot.get_tip())\n",
+    "\n",
+    "vars(pickup)"
    ]
   },
   {
