fix tip spot Z and start with tube spot z

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -950,7 +950,14 @@
    "source": [
     "# Testing out the SilverDeck \n",
     "\n",
-    "Have fun playing with my aberration."
+    "> Have fun playing with my aberration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
    ]
   },
   {
@@ -1122,36 +1129,6 @@
     "tip = tip_spot.get_tip()\n",
     "\n",
     "tip.total_tip_length, tip.fitting_depth"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In pipettin the math for the top coordinate of a tip in a tip rack should be:\n",
-    "\n",
-    "1. (+) Workspace's Z origin (usually 0).\n",
-    "     - Get this from the Deck.\n",
-    "2. (+) Platform's Z position: usually 0 for all, can be adjusted.\n",
-    "     - Get this from the TipRack's location.\n",
-    "3. (+) Platform's activeHeight (i.e. tip spot Z position): height of the surface that supports the tips.\n",
-    "     - This is not defined in PLR.\n",
-    "4. (+) Container's offset: Distance from the tip's tip to the tip spot, usually negative (i.e. how much the tip \"sinks\" into the tip spot).\n",
-    "     - This is also undefined in PLR.\n",
-    "     - However, in combination with (3), the equivalent PLR tip spot location can be calculated: (3) - (4) = TipSpot's Z\n",
-    "5. (+) Total tip's length.\n",
-    "    - Available in the Tip object.\n",
-    "6. (-) Tip's fitting depth.\n",
-    "    - Available in the Tip object (should be equal to the tip's length minus the tip's active height).\n",
-    "    - Use with (4) and (5) to obtain the Z coordinate at which the tip is well fitted.\n",
-    "\n",
-    "In summary, I should:\n",
-    "\n",
-    "1. Have the SilverDeck set the TipSpot Z coordinate equal to \"activeHeight\" - \"container_z_offset\".\n",
-    "2. Figure out coordinates for tubes and well plates.\n",
-    "3. Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
-    "4. Have the backend translate (during setup) non-PW decks to PW format, and save them to the database.\n",
-    "   - This is essential when the deck is not PW-ish.\n"
    ]
   },
   {
@@ -1508,6 +1485,20 @@
     "pickup = Pickup(resource=tip_spot, offset=Coordinate(0,0,0,), tip=tip_spot.get_tip())\n",
     "\n",
     "vars(pickup)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To-do List\n",
+    "\n",
+    "In summary, I should:\n",
+    "\n",
+    "- [x] Have the SilverDeck set the PLR TipSpot Z coordinate from PW data..\n",
+    "- [ ] Figure out coordinates for tubes and well plates.\n",
+    "- [ ] Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
+    "- [ ] Have the backend translate (during setup) non-PW decks to PW format, and save them to the database. This is essential when the deck is not PW-ish.\n"
    ]
   },
   {
