piper backend: map channels to tools, "geometry" checks are pending

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -972,42 +972,19 @@
     "import json\n",
     "import urllib.request\n",
     "\n",
-    "def load_objects_from_url(target_url):\n",
-    "  data = urllib.request.urlopen(target_url)\n",
-    "  objects = json.load(data)\n",
-    "  return objects\n",
+    "from pylabrobot.resources.pipettin.utils import load_objects\n",
     "\n",
-    "target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/workspaces.json'\n",
-    "workspace = load_objects_from_url(target_url)[0]\n",
+    "# path = \"/tmp/workspaces.json\"\n",
+    "location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/workspaces.json'\n",
+    "workspace = load_objects(location)[0]\n",
     "\n",
-    "# target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/platforms.json'\n",
-    "# platforms = load_objects_from_url(target_url)\n",
+    "# location = \"/tmp/platforms.json\"\n",
+    "location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/platforms.json'\n",
+    "platforms = load_objects(location)\n",
     "\n",
-    "target_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/containers.json'\n",
-    "containers = load_objects_from_url(target_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "def load_objects_from_file(file_path):\n",
-    "  with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "    objects = json.load(f)\n",
-    "  return objects\n",
-    "\n",
-    "# workspaces = load_objects_from_file(\"/tmp/workspaces.json\")\n",
-    "# workspace = workspaces[0]\n",
-    "\n",
-    "platforms = load_objects_from_file(\"/tmp/platforms.json\")\n",
-    "\n",
-    "# containers = load_objects_from_file(\"/tmp/containers.json\")"
+    "# location = \"/tmp/platforms.json\"\n",
+    "location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/containers.json'\n",
+    "containers = load_objects(location)"
    ]
   },
   {
@@ -1247,13 +1224,14 @@
    },
    "outputs": [],
    "source": [
-    "from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
-    "back = ChatterBoxBackend()\n",
+    "# Dummy backend.\n",
+    "# from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
+    "# back = ChatterBoxBackend()\n",
     "\n",
-    "# NOTE: For the PiperBackend.\n",
-    "# from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
-    "# file_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/tools.json'\n",
-    "# back = PiperBackend(piper_config={\"dry\": True}, tools_json=file_url)"
+    "# Piper backend.\n",
+    "from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
+    "tools_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/tools.json'\n",
+    "back = PiperBackend(config={\"dry\": True}, tool_defs=tools_url)"
    ]
   },
   {
@@ -1296,11 +1274,10 @@
    "source": [
     "tiprack = lh.get_resource(\"200ul_tip_rack_MULTITOOL 1\")\n",
     "\n",
-    "# tip_spots = tiprack[\"A1\"]  # NOTE: For the PiperBackend.\n",
-    "tip_spots = tiprack[\"A1:C1\"]\n",
+    "tip_spots = tiprack[\"A1:B1\"]\n",
     "\n",
     "# TODO: Ask for a better error message when tips are passed instead of tip spots.\n",
-    "pickups = await lh.pick_up_tips(tip_spots, tool_id=\"P20\")"
+    "pickups = await lh.pick_up_tips(tip_spots, use_channels=[0, 1])"
    ]
   },
   {
