--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -948,7 +948,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing out the SilverDeck \n",
+    "# The SilverDeck \n",
     "\n",
     "> Have fun playing with my aberration."
    ]
@@ -1013,6 +1013,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TipRack and coordinates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1023,25 +1030,10 @@
     "tiprack = deck.get_resource(\"200ul_tip_rack_MULTITOOL 1\")\n",
     "\n",
     "# Check if all tip spots have tips.\n",
-    "all([spot.tracker.has_tip for spot in tiprack.children])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
+    "print(all([spot.tracker.has_tip for spot in tiprack.children]))\n",
+    "\n",
+    "# Print a grid representation.\n",
     "tiprack.print_grid()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Check TipRack coordinates"
    ]
   },
   {
@@ -1183,30 +1175,6 @@
    "metadata": {},
    "source": [
     "Si fue \"True\" está todo bien ;)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Well and TubeRack locations\n",
-    "\n",
-    "Lets try with point 2.\n",
-    "\n",
-    "Figure out coordinates for tubes and well plates.\n",
-    "\n",
-    "### PLR-PW new child translator - Part 1: Deck\n",
-    "\n",
-    "Lets try with point 3.\n",
-    "\n",
-    "Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
-    "\n",
-    "### PLR-PW new child translator - Part 2: Back\n",
-    "\n",
-    "Lets try with point 4.\n",
-    "\n",
-    "Have the backend translate (during setup) non-PW decks to PW format, and save them to the database.\n",
-    "   - This is essential when the deck is not PW-ish."
    ]
   },
   {
@@ -1468,317 +1436,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## To-do List\n",
+    "# To-do list\n",
     "\n",
     "In summary, I should:\n",
     "\n",
     "- [x] Have the SilverDeck set the PLR TipSpot Z coordinate from PW data..\n",
     "- [ ] Figure out coordinates for tubes and well plates.\n",
     "- [ ] Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
-    "- [ ] Have the backend translate (during setup) non-PW decks to PW format, and save them to the database. This is essential when the deck is not PW-ish.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Code form PLR notebooks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## STAR deck examples\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a new liquid handler using `STAR` as its backend, and the hamilton \"deck\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Basic imports:\n",
-    "# - liquid handler\n",
-    "from pylabrobot.liquid_handling import LiquidHandler\n",
-    "# - backend\n",
-    "from pylabrobot.liquid_handling.backends import STAR\n",
-    "from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
-    "# - deck\n",
-    "from pylabrobot.resources.hamilton import STARLetDeck"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pylabrobot.resources import set_tip_tracking, set_volume_tracking\n",
+    "- [ ] Have the backend translate (during setup) non-PW decks to PW format, and save them to the database. This is essential when the deck is not PW-ish.\n",
     "\n",
-    "# We enable tip and volume tracking globally using the `set_volume_tracking` and `set_tip_tracking` methods.\n",
-    "set_volume_tracking(enabled=True)\n",
-    "set_tip_tracking(enabled=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "backend = ChatterBoxBackend()\n",
-    "# lh = LiquidHandler(backend=backend, deck=STARLetDeck())\n",
-    "lh = LiquidHandler(backend=backend, deck=STARLetDeck())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The final step is to open communication with the robot. This is done using the {func}`~pylabrobot.liquid_handling.LiquidHandler.setup` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await lh.setup()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Well and TubeRack locations:\n",
     "\n",
-    "Now that we have a `LiquidHandler` instance, we can define the deck layout.\n",
+    "- Figure out coordinates for tubes and well plates.\n",
     "\n",
-    "The layout in this tutorial will contain five sets of standard volume tips with filter, 1 set of 96 1mL wells, and tip and plate carriers on which these resources are positioned.\n",
+    "PLR-PW new child translator - Part 1: Deck\n",
     "\n",
-    "Start by importing the relevant objects and variables from the PyHamilton package. This notebook uses the following resources:\n",
+    "- Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
     "\n",
-    "- {class}`~pylabrobot.resources.ml_star.tip_carriers.TIP_CAR_480_A00` tip carrier\n",
-    "- {class}`~pylabrobot.resources.ml_star.plate_carriers.PLT_CAR_L5AC_A00` plate carrier\n",
-    "- {class}`~pylabrobot.resources.corning_costar.plates.Cos_96_DW_1mL` wells\n",
-    "- {class}`~pylabrobot.resources.ml_star.tip_racks.HTF_L` tips"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pylabrobot.resources import (\n",
-    "    TIP_CAR_480_A00,\n",
-    "    PLT_CAR_L5AC_A00,\n",
-    "    Cos_96_DW_1mL,\n",
-    "    HTF_L\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then create a tip carrier named `tip carrier`, which will contain tip rack at all 5 positions. These positions can be accessed using `tip_car[x]`, and are 0 indexed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tip_car = TIP_CAR_480_A00(name='tip carrier')\n",
-    "tip_car[0] = HTF_L(name='tips_01')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use {func}`~pylabrobot.resources.abstract.assign_child_resources` to assign the tip carrier to the deck of the liquid handler. All resources contained by this carrier will be assigned automatically.\n",
+    "PLR-PW new child translator - Part 2: Back\n",
     "\n",
-    "In the `rails` parameter, we can pass the location of the tip carrier. The locations of the tips will automatically be calculated."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lh.deck.assign_child_resource(tip_car, rails=3)"
+    "- Have the backend translate (during setup) non-PW decks to PW format, and save them to the database.\n",
+    "  - This is essential when the deck is not PW-ish."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Repeat this for the plates."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt_car = PLT_CAR_L5AC_A00(name='plate carrier')\n",
-    "plt_car[0] = Cos_96_DW_1mL(name='plate_01')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lh.deck.assign_child_resource(plt_car, rails=15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pylabrobot.resources.liquid import Liquid\n",
-    "\n",
-    "plate = lh.get_resource(\"plate_01\")\n",
-    "plate.set_well_liquids((Liquid.WATER, 300))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at a summary of the deck layout using {func}`~pylabrobot.liquid_handling.LiquidHandler.summary`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lh.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Picking up tips\n",
-    "\n",
-    "Picking up tips is as easy as querying the tips from the tiprack."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tiprack = lh.get_resource(\"tips_01\")\n",
-    "await lh.pick_up_tips(tiprack[\"A1:C1\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Aspirating and dispensing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Aspirating and dispensing work similarly to picking up tips: where you use booleans to specify which tips to pick up, with aspiration and dispensing you use floats to specify the volume to aspirate or dispense in $\\mu L$.\n",
-    "\n",
-    "The cells below move liquid from wells `'A1:C1'` to `'D1:F1'` using channels 1, 2, and 3 using the {func}`~pylabrobot.liquid_handling.LiquidHandler.aspirate` and {func}`~pylabrobot.liquid_handling.LiquidHandler.dispense` methods."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plate = lh.get_resource(\"plate_01\")\n",
-    "await lh.aspirate(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After the liquid has been aspirated, dispense it in the wells below. Note that while we specify different wells, we are still using the same channels. This is needed because only these channels contain liquid, of course."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await lh.dispense(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's move the liquid back to the original wells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await lh.aspirate(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])\n",
-    "await lh.dispense(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Discarding tips\n",
-    "\n",
-    "Finally, you can discard tips by using the {func}`~pylabrobot.liquid_handling.LiquidHandler.discard_tips` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await lh.drop_tips(tiprack[\"A1:C1\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await lh.stop()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
