--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -976,7 +976,8 @@
     "\n",
     "# path = \"/tmp/workspaces.json\"\n",
     "location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/workspaces.json'\n",
-    "workspace = load_objects(location)[0]\n",
+    "workspace = load_objects(location)[2]\n",
+    "print(workspace[\"name\"])\n",
     "\n",
     "# location = \"/tmp/platforms.json\"\n",
     "location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/platforms.json'\n",
@@ -989,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
@@ -1481,7 +1482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
