SilverDeck: assign anchored platforms as children of their anchors

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1002,6 +1002,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Anchor behaviour"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1009,8 +1016,50 @@
    },
    "outputs": [],
    "source": [
-    "deck.children\n",
-    "# deck.get_all_children()"
+    "# First children of the Deck.\n",
+    "deck.children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grand children of the Deck.\n",
+    "children = [ child for first_child in deck.children for child in first_child.children ]\n",
+    "children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anchor = deck.children[0].children[0]\n",
+    "\n",
+    "anchor.get_absolute_location()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tip_rack = anchor.children[0]\n",
+    "\n",
+    "tip_rack.get_absolute_location()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To-do\n",
+    "\n",
+    "- [ ] The coordinates of the anchor and its tip-rack child look wrong. Fix that."
    ]
   },
   {
@@ -1482,7 +1531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
